--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,3 +1,7 @@
+[[bin]]
+name = 'substratekitties'
+path = 'src/main.rs'
+
 [package]
 authors = ['Parity Technologies <admin@parity.io>']
 build = 'build.rs'
@@ -5,9 +9,10 @@ edition = '2018'
 name = 'node-template'
 version = '0.9.0'
 
-[[bin]]
-name = 'substratekitties-demo'
-path = 'src/main.rs'
+[build-dependencies]
+vergen = '3'
+[profile.release]
+panic = 'unwind'
 
 [dependencies]
 error-chain = '0.12'
@@ -23,12 +28,12 @@ trie-root = '0.11.0'
 [dependencies.basic-authorship]
 git = 'https://github.com/paritytech/substrate.git'
 package = 'substrate-basic-authorship'
-rev = 'c7b73a1a575e9d68ade62c9391c645f3fb75e553'
+rev = '0ee04a854ebfc60f1653ad602ccfc11c79c050fd'
 
 [dependencies.consensus]
 git = 'https://github.com/paritytech/substrate.git'
 package = 'substrate-consensus-aura'
-rev = 'c7b73a1a575e9d68ade62c9391c645f3fb75e553'
+rev = '0ee04a854ebfc60f1653ad602ccfc11c79c050fd'
 
 [dependencies.ctrlc]
 features = ['termination']
@@ -37,12 +42,12 @@ version = '3.0'
 [dependencies.inherents]
 git = 'https://github.com/paritytech/substrate.git'
 package = 'substrate-inherents'
-rev = 'c7b73a1a575e9d68ade62c9391c645f3fb75e553'
+rev = '0ee04a854ebfc60f1653ad602ccfc11c79c050fd'
 
 [dependencies.network]
 git = 'https://github.com/paritytech/substrate.git'
 package = 'substrate-network'
-rev = 'c7b73a1a575e9d68ade62c9391c645f3fb75e553'
+rev = '0ee04a854ebfc60f1653ad602ccfc11c79c050fd'
 
 [dependencies.node-template-runtime]
 path = 'runtime'
@@ -50,34 +55,29 @@ path = 'runtime'
 [dependencies.primitives]
 git = 'https://github.com/paritytech/substrate.git'
 package = 'substrate-primitives'
-rev = 'c7b73a1a575e9d68ade62c9391c645f3fb75e553'
+rev = '0ee04a854ebfc60f1653ad602ccfc11c79c050fd'
 
 [dependencies.sr-io]
 git = 'https://github.com/paritytech/substrate.git'
-rev = 'c7b73a1a575e9d68ade62c9391c645f3fb75e553'
+rev = '0ee04a854ebfc60f1653ad602ccfc11c79c050fd'
 
 [dependencies.substrate-cli]
 git = 'https://github.com/paritytech/substrate.git'
-rev = 'c7b73a1a575e9d68ade62c9391c645f3fb75e553'
+rev = '0ee04a854ebfc60f1653ad602ccfc11c79c050fd'
 
 [dependencies.substrate-client]
 git = 'https://github.com/paritytech/substrate.git'
-rev = 'c7b73a1a575e9d68ade62c9391c645f3fb75e553'
+rev = '0ee04a854ebfc60f1653ad602ccfc11c79c050fd'
 
 [dependencies.substrate-executor]
 git = 'https://github.com/paritytech/substrate.git'
-rev = 'c7b73a1a575e9d68ade62c9391c645f3fb75e553'
+rev = '0ee04a854ebfc60f1653ad602ccfc11c79c050fd'
 
 [dependencies.substrate-service]
 git = 'https://github.com/paritytech/substrate.git'
-rev = 'c7b73a1a575e9d68ade62c9391c645f3fb75e553'
+rev = '0ee04a854ebfc60f1653ad602ccfc11c79c050fd'
 
 [dependencies.transaction-pool]
 git = 'https://github.com/paritytech/substrate.git'
 package = 'substrate-transaction-pool'
-rev = 'c7b73a1a575e9d68ade62c9391c645f3fb75e553'
-[profile.release]
-panic = 'unwind'
-
-[build-dependencies]
-vergen = '3'
+rev = '0ee04a854ebfc60f1653ad602ccfc11c79c050fd'
